tests/baselines/reference/aiDiagnosticsOptions.errors.txt
aiDiagnosticsOptions.ts(3,5): error TS2322: Type 'number' is not assignable to type 'string'.
aiDiagnosticsOptions.ts(9,5): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
aiDiagnosticsOptions.ts(12,13): error TS2304: Cannot find name 'missingVar'.


==== aiDiagnosticsOptions.ts (3 errors) ====
    // This file tests the AI diagnostics compiler options and output formats.
    
    let x: string = 42; // Should trigger type error and AI diagnostics
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    function foo(a: number) {
        return a + 1;
    }
    
    foo("bar"); // Should trigger type error and AI diagnostics
        ~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    
    // Intentionally missing import
    console.log(missingVar); // Should trigger AI diagnostics for undefined variable
                ~~~~~~~~~~
!!! error TS2304: Cannot find name 'missingVar'.
    
    // Edge case: valid code
    const ok: number = 123;
    